Bug fix on mobile card expansion
Cards not expanding on mobile. Duplicated .expanded class into the media query hopefully this resolves the issue so it doesn't get over ridden again by the .card max-height property

--- a/CV/cv.css
+++ b/CV/cv.css
@@ -226,6 +226,10 @@ section a{
 		max-height: 2em;
 	}
 
+	.expanded{
+		max-height: 100em;
+	}
+
 	.socials{
 		font-size: 12px;
 	}
